--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -60,12 +60,6 @@
 
                     <div class="nav-collapse">
                         <ui:fragment rendered="#{teacherBean.loggedIn}">
-                            <!--                            <ul class="nav pull-left">
-                                                            <li><a href="#">¿Quiénes Somos?</a></li>
-                                                            <li><a href="#">Sucursales</a></li>
-                                                            <li><a href="#">Precios</a></li>
-                                                            <li><a href="#">Encomiendas</a></li>
-                                                        </ul> -->
                             <ul class="nav pull-right">
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -94,22 +88,14 @@
             </div>
         </div>
 
-        <div class=" offset2 span11" style="background-color: #ffffff">             
+        <div class=" offset2 span10" style="background-color: #ffffff">             
             <div class="pull-right"><h:graphicImage id="image" url="/resources/images/logo.png" width="50%" height="50%"> </h:graphicImage></div>
             <h1><small>Environnement Informatique fondé sur la Linguistique Textuelle pour la formation des futurs enseignants de FLE</small></h1>
             <p:separator id="customSeparator1" style="width:970px;height:5px" />
-            <!--                <div class="span8">
-                                <div class="btn-group">
-                                    <button  class="btn btn-success" href="#tab1" data-toggle="tab">Inicio</button>
-                                    <button  class="btn btn-success" href="#tab2" data-toggle="tab">¿Quiénes Somos?</button>
-                                    <button  class="btn btn-success" href="#tab3" data-toggle="tab">Nuestras Sucursales</button>
-                                    <button  class="btn btn-success" href="#tab4" data-toggle="tab">Nuestros Precios</button>
-                                </div>
-                            </div>-->
         </div>
-        <ui:insert name="content">
-
-        </ui:insert>
+        <div class="offset2 span10" style="background-color: #ffffff">
+            <ui:insert name="content"></ui:insert>
+        </div>
     </h:body>
 
 </html>
