--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -44,6 +44,7 @@
         <script type="text/javascript">
             $('.collapse').collapse();
         </script>
+        <ui:insert name="head"></ui:insert>
     </h:head>
 
     <h:body>
