--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -16,24 +16,6 @@
             #map_canvas { height: 100% }
         </style>
 
-        <!--        <script type="text/javascript"
-                        src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDCkSq894sFExwnQXsNZWTFRZoH39aJT4I&amp;sensor=true">
-                </script>-->
-
-        <!--        <script type="text/javascript">
-                    function initialize() {
-                        var mapOptions = {
-                            center: new google.maps.LatLng(-34.397, 150.644),
-                            zoom: 20,
-                            mapTypeId: google.maps.MapTypeId.HYBRID
-        
-                        };
-                        var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-        
-                    }
-        
-                </script>-->
-
         <title>Elite-FLE :<ui:insert name="title"></ui:insert></title>
 
         <link href="#{request.contextPath}/resources/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
@@ -78,11 +60,6 @@
                                     </ul>
                                 </li>
                             </ul>
-
-                            <!--                            <form class="navbar-search pull-right">
-                                                            <input type="text" class="search-query" placeholder="Buscar"/>
-                                                            <button type="submit" class="btn"><i class="icon-search" /></button>
-                                                        </form>-->
                         </ui:fragment>          
                     </div>
                 </div>
@@ -92,7 +69,7 @@
         <div class=" offset2 span10" style="background-color: #ffffff">             
             <div class="pull-right"><h:graphicImage id="image" url="/resources/images/logo.png" width="50%" height="50%"> </h:graphicImage></div>
             <h1><small>Environnement Informatique fondé sur la Linguistique Textuelle pour la formation des futurs enseignants de FLE</small></h1>
-            <p:separator id="customSeparator1" style="width:970px;height:5px" />
+            <p:separator id="customSeparator1" style="width:95%;height:5px" />
         </div>
         <div class="offset2 span10" style="background-color: #ffffff">
             <ui:insert name="content"></ui:insert>
