--- a/src/main/webapp/resources/css/activityCSS.css
+++ b/src/main/webapp/resources/css/activityCSS.css
@@ -1,8 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
     Created on : 16 déc. 2014, 18:19:19
     Author     : Edward
@@ -31,10 +26,83 @@ and open the template in the editor.
 
 .referent {
     display: inline-block;
-    cursor: pointer;
 }
 
 .coreferent {
-    display: inline;
-    cursor: pointer;
+    display: inline-block;
+}
+
+/* Prevent the text contents of draggable elements from being selectable. */
+[draggable=true] {
+/*    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;*/
+    /* Required to make elements draggable in old WebKit */
+    -khtml-user-drag: element;
+    -webkit-user-drag: element;
+}
+
+.text {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+}
+
+.selection {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width:100%;
+    height:100%;
+    margin:0px;padding:0px;
+    border: 1px solid;
+    border-radius: 10px;
+    color:#cccccc;
+}
+.selection td{
+    vertical-align:middle;
+    text-align:center;
+    color:#000000;    
+}
+.selection tr:first-child th{
+    background:-o-linear-gradient(bottom, #cccccc 5%, #999999 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cccccc), color-stop(1, #999999) );
+    background:-moz-linear-gradient( center top, #cccccc 5%, #999999 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#999999");	background: -o-linear-gradient(top,#cccccc,999999);
+
+    background-color:#cccccc;
+    border:1px solid #ffffff;
+    text-align:center;
+    border-width:0px 0px 1px 1px;
+    font-size:14px;
+    font-family:Arial;
+    font-weight:bold;
+    color:red;
+}
+.selection tr:first-child:hover th{
+    background:-o-linear-gradient(bottom, #cccccc 5%, #999999 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cccccc), color-stop(1, #999999) );
+    background:-moz-linear-gradient( center top, #cccccc 5%, #999999 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#999999");	background: -o-linear-gradient(top,#cccccc,999999);
+
+    background-color:#cccccc;
+}
+.selection td{
+    color:orange;
+}
+#message
+{
+    border: 1px solid;
+    margin: 10px 0px;
+    padding:15px 10px 15px 50px;
+    background-repeat: no-repeat;
+    background-position: 10px center;
+    border-radius: 5px;
+}
+.success {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+    background-image:url('../images/icons/success.png');
+}
+.warning {
+    color: #9F6000;
+    background-color: #FEEFB3;
+    background-image: url('../images/icons/warning.png');
 }
