--- a/src/main/webapp/resources/css/spottingActivity.css
+++ b/src/main/webapp/resources/css/spottingActivity.css
@@ -34,9 +34,9 @@
 
 /* Prevent the text contents of draggable elements from being selectable. */
 [draggable=true] {
-/*    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;*/
+    /*    -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;*/
     /* Required to make elements draggable in old WebKit */
     -khtml-user-drag: element;
     -webkit-user-drag: element;
@@ -64,9 +64,11 @@
     color:#000000;    
 }
 .selection tr:first-child th{
-    background:-o-linear-gradient(bottom, #cccccc 5%, #999999 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cccccc), color-stop(1, #999999) );
+    background:-o-linear-gradient(bottom, #cccccc 5%, #999999 100%);	
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cccccc), color-stop(1, #999999) );
     background:-moz-linear-gradient( center top, #cccccc 5%, #999999 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#999999");	background: -o-linear-gradient(top,#cccccc,999999);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#999999");	
+    background: -o-linear-gradient(top,#cccccc,999999);
 
     background-color:#cccccc;
     border:1px solid #ffffff;
@@ -77,18 +79,10 @@
     font-weight:bold;
     color:red;
 }
-.selection tr:first-child:hover th{
-    background:-o-linear-gradient(bottom, #cccccc 5%, #999999 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cccccc), color-stop(1, #999999) );
-    background:-moz-linear-gradient( center top, #cccccc 5%, #999999 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#999999");	background: -o-linear-gradient(top,#cccccc,999999);
-
-    background-color:#cccccc;
-}
 .selection td{
     color:orange;
 }
-#message
-{
+#message {
     border: 1px solid;
     margin: 10px 0px;
     padding:15px 10px 15px 50px;
@@ -105,4 +99,54 @@
     color: #9F6000;
     background-color: #FEEFB3;
     background-image: url('../images/icons/warning.png');
+}
+
+.column1, .column3, .column2 {
+    float: left;
+    border: 1px solid;
+    -webkit-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    text-align: center;
+    color:#cccccc;
+}
+.column1 header, .column2 header, .column3 header {
+    background-color:#E6E6FF;
+    border:1px solid #ffffff;
+    text-align:center;
+    border-width:0px 0px 1px 1px;
+    font-size:14px;
+    font-family:Arial;
+    font-weight:bold;
+
+    padding: 5px;
+    border-bottom: 1px solid #ffffff;
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    -ms-border-radius-topleft: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -ms-border-top-right-radius: 10px;
+    -moz-border-radius-topright: 10px;
+    border-top-right-radius: 10px;
+}
+
+.column1 header {
+    color:red;
+}
+.column2 header {
+    color:lime;
+}
+.column3 header {
+    color:blue;
+}
+.column1 .cbody {
+    color:orange;
+}
+.column2 .cbody {
+    color:greenyellow;
+}
+.column3 .cbody {
+    color:skyblue;
 }
