Spotting activity3 complete! It allows drag and drop only in the respective column. It Verifies if all the answers are corrects -> feedback.

--- a/src/main/webapp/resources/css/spottingActivity.css
+++ b/src/main/webapp/resources/css/spottingActivity.css
@@ -101,7 +101,7 @@
     background-image: url('../images/icons/warning.png');
 }
 
-.column1, .column3, .column2 {
+.column1, .column3, .column2, .column0 {
     float: left;
     border: 1px solid;
     -webkit-border-radius: 10px;
@@ -110,6 +110,9 @@
     border-radius: 10px;
     text-align: center;
     color:#cccccc;
+}
+.column0 {
+    margin-top: 25px;    
 }
 .column1 header, .column2 header, .column3 header {
     background-color:#E6E6FF;
@@ -149,4 +152,20 @@
 }
 .column3 .cbody {
     color:skyblue;
+}
+
+.column1 .gn, .column2 .gn, .column3 .gn { 
+    border-bottom: 1px solid #cccccc;
+    background-color: gray;
+}
+.column0 .gn {
+    border-bottom: 1px solid #cccccc;
+    color: black;
+}
+.column0 .pron {
+    color: black;
+}
+
+.column1 .coreferent, .column2 .coreferent, .column3 .coreferent {
+    display: block;
 }
